--- a/src/package.json
+++ b/src/package.json
@@ -10,5 +10,8 @@
         "laravel-vite-plugin": "^0.7.2",
         "vite": "^4.0.0",
         "vue": "^3.2.47"
+    },
+    "dependencies": {
+        "vue-router": "^4.1.6"
     }
 }
