--- a/src/package.json
+++ b/src/package.json
@@ -12,6 +12,7 @@
         "vue": "^3.2.47"
     },
     "dependencies": {
-        "vue-router": "^4.1.6"
+        "vue-router": "^4.1.6",
+        "vuetify": "^3.1.7"
     }
 }
